--- a/src/app/chat/chatcontent/chatcontent.component.scss
+++ b/src/app/chat/chatcontent/chatcontent.component.scss
@@ -18,6 +18,7 @@ h1 {
 }    
 #chatContent {
     padding:15px;
+    border:1px solid #848484;
     h1 {
        text-align:left;     
     }
@@ -26,6 +27,10 @@ h1 {
     .line {
         display:flex;
         flex-direction:row;
+        line-height: 1.5rem;
+        border: 1px solid #eeef;
+        width: 100%;
+        background-color: #f7f7f7;
     }
     .part,.join, .mode, .nick, .kick, .ban {
         font-style:italic;
@@ -41,6 +46,7 @@ h1 {
     }
     .username {
         margin-right:10px;
+        font-weight:500;
     }
 }
 
