--- a/src/app/chat/messagebox/messagebox.component.scss
+++ b/src/app/chat/messagebox/messagebox.component.scss
@@ -8,6 +8,7 @@
     input {
         width:calc(100% - 100px);
         height:30px;
+        border:1px solid #848484;
     }
     button {
         width:100px;
