--- a/src/app/chat/page/roomparameters/roomparameters.component.html
+++ b/src/app/chat/page/roomparameters/roomparameters.component.html
@@ -11,6 +11,7 @@
                     <mat-form-field>
                         <mat-label i18n>Mot de passe du salon</mat-label>
                         <input matInput [(ngModel)]="chanPassword" />
+                        <button>Mettre le mot de passe</button>
                     </mat-form-field>
                 </div>    
             </div>
