--- a/src/app/chat/partenaires/partenaires.component.html
+++ b/src/app/chat/partenaires/partenaires.component.html
@@ -9,4 +9,9 @@
     <a href="http://premiumreferencement.com/annuaire/internet/">Annuaire Referencement - Internet</a>
     <br />
     <a href="http://annuaire.ludikreation.com">Annuaire LudiKreation</a>
+    <br />
+    <a href="https://francesurf.net/">FranceSurf</a>
+    <br />
+    <a href="http://refok.fr" title="booster référencement">booster référencement</a>
+    
 </div>
